...

  var showDeclineDialog by remember { mutableStateOf(false) }
  Log.e("InstantTesting", "Response Setup")

  Scaffold(
      containerColor = MaterialTheme.colorScheme.background,
      topBar = {
        TopAppBar(
            modifier = Modifier.testTag("topBar"),
            navigationIcon = {
              IconButton(
                  onClick = { navigationActions.goBack() },
                  modifier = Modifier.testTag("backButton")) {
                    Icon(
                        imageVector = Icons.AutoMirrored.Filled.ArrowBack,
                        contentDescription = "Back")
                  }
            },
            title = {
              if (lesson.status == LessonStatus.STUDENT_REQUESTED) {
                Text(
                    text = "Confirm the Lesson",
                    style = MaterialTheme.typography.titleLarge,
                    modifier = Modifier.testTag("confirmLessonTitle"))
              } else {
                Text(
                    text = "Respond to Request",
                    style = MaterialTheme.typography.titleLarge,
                    modifier = Modifier.testTag("requestPendingLessonTitle"))
              }
            })
      }) { paddingValues ->
        Column(
            modifier =
                Modifier.fillMaxSize()
                    .padding(paddingValues)
                    .padding(horizontal = 16.dp)
                    .verticalScroll(rememberScrollState())
                    .testTag("tutorLessonResponseScreen")) {
              val studentProfile = listProfilesViewModel.getProfileById(lesson.studentUid)
              if (studentProfile == null) {
                ErrorState(message = "Cannot retrieve student profile")
              } else {
                // Lesson information card
                Card(
...
                            containerColor = MaterialTheme.colorScheme.surfaceVariant)) {
                      DisplayLessonDetails(lesson, studentProfile)

                      LessonLocationDisplay(
                          latitude = lesson.latitude,
                          longitude = lesson.longitude,
                          lessonTitle = lesson.title,
                      )
                    }

                Spacer(modifier = Modifier.weight(1f))

                // Confirmation button
                Button(
                    shape = MaterialTheme.shapes.medium,
                    onClick = { showConfirmDialog = true },
                    modifier =
                        Modifier.fillMaxWidth().padding(bottom = 16.dp).testTag("confirmButton")) {
                      Icon(
                          Icons.AutoMirrored.Filled.Send,
                          contentDescription = null,
                          modifier = Modifier.size(20.dp))
                      Spacer(modifier = Modifier.width(8.dp))
                      Text("Offer to Teach (${currentProfile.price}.-/hour)")
...

                if (lesson.status == LessonStatus.PENDING_TUTOR_CONFIRMATION) {
                  Button(
                      shape = MaterialTheme.shapes.medium,
                      onClick = { showDeclineDialog = true },
                      modifier =
                          Modifier.fillMaxWidth().padding(bottom = 16.dp).testTag("cancelButton"),
                      colors =
                          ButtonDefaults.buttonColors(
                              containerColor = MaterialTheme.colorScheme.error)) {
                        Icon(
                            Icons.Default.Close,
                            contentDescription = null,
...
              }
            }

        // Confirmation Dialog
        if (showConfirmDialog) {
          AlertDialog(
              modifier = Modifier.testTag("confirmDialog"),
              onDismissRequest = { showConfirmDialog = false },
              title = {
                Text(text = "Confirm Your Offer", modifier = Modifier.testTag("confirmDialogTitle"))
              },
              text = {
                Text(
                    "Would you like to offer to teach this lesson at your standard rate of ${currentProfile.price}.-/hour?",
                    modifier = Modifier.testTag("confirmDialogText"))
              },
              confirmButton = {
                Button(
                    modifier = Modifier.testTag("confirmDialogConfirmButton"),
                    onClick = {
                      if (isConnected) {
                        if (isInstant(lesson) &&
                            lessonViewModel.currentUserLessons.value.any {
                              it.status == LessonStatus.INSTANT_CONFIRMED
                            }) {
...
                    }) {
                      Text("Confirm")
                    }
              },
              dismissButton = {
                TextButton(
                    modifier = Modifier.testTag("confirmDialogCancelButton"),
                    onClick = { showConfirmDialog = false }) {
                      Text("Cancel")
                    }
              })
        }

        // Decline Dialog
        if (showDeclineDialog) {
          AlertDialog(
              modifier = Modifier.testTag("declineDialog"),
              onDismissRequest = { showDeclineDialog = false },
              title = {
                Text(text = "Dismiss the Lesson", modifier = Modifier.testTag("declineDialogTitle"))
              },
              text = {
                Text(
                    text = "Are you sure you want to dismiss this lesson?",
                    modifier = Modifier.testTag("declineDialogText"))
              },
              confirmButton = {
                Button(
                    modifier = Modifier.testTag("declineDialogConfirmButton"),
                    onClick = {
                      if (isConnected) {
                        lessonViewModel.updateLesson(
                            lesson.copy(
                                tutorUid = listOf(),
                                status = LessonStatus.STUDENT_REQUESTED,
...
                    }) {
                      Text("Confirm")
                    }
              },
              dismissButton = {
                TextButton(
                    modifier = Modifier.testTag("declineDialogCancelButton"),
                    onClick = { showDeclineDialog = false }) {
                      Text("Cancel")
                    }
              })
        }
      }
...
